--- a/todo-list/public/style.css
+++ b/todo-list/public/style.css
@@ -3,10 +3,23 @@ body {
   margin: auto;
   background-color: #eed6d3;
 }
-.header > h1 {
+.header {
   display: flex;
+  margin: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 0px;
+  width: 50%;
   border: 1px cyan solid;
-  justify-content: center;
+  border-radius: 20px;
+  flex-direction: column;
+  align-items: center;
+  background-color: #8fdde7;
+}
+.header > h1 {
+  text-align: center;
+  /* border: 2px red solid; */
+  margin: auto;
 }
 
 .task {
